# CUDA_experiments

./: CMakeLists.txt  README.md  client_ex.m  package.xml
data/: X_init2.csv  coords2.csv  coords3.csv  free_indices1.csv  free_indices2.csv  properties3.csv
include/: file_rw.hpp  opt_obj.h  opt_obj_commented.h  opt_obj_old.hpp  transformation_utilities.hpp  utilities.hpp
mat_test/: test.m~
mat_test/cpp_cuda_optimization_test/: drape_sim.cpp  drape_sim.mexa64  opt_obj.cu  opt_obj.h  test.m
mat_test/cpp_cuda_optimization_test/backup/: err_fun_cuda.cu  err_fun_cuda.h  opt_obj.cpp  opt_obj.hpp
mat_test/cpp_cuda_optimization_test/data_files/: X_init1.csv  X_init3.csv  free_indices3.csv  node_info1.csv  node_info2.csv  node_info3.csv  properties2.csv
mat_test/cpp_optimization_test/: backup.c  drape_sim.cpp  drape_sim.mexa64  opt_obj.cpp  opt_obj.hpp  test.m
mat_test/cpp_optimization_test/data_files/: coords.csv  free_indices.csv  properties.csv
src/: cuda_opt_client.cpp  cuda_opt_server.cpp  drape_sim.cpp  error_fun_cuda3.cu  file_rw.cpp  opt_obj.cu  opt_obj_commented.cu  opt_obj_eigen.cpp  opt_obj_old.cpp  test_file_cuda.cu  test_file_eigen.cu  transformation_utilities.cpp  utilities.cpp
srv/: OptCuda.srv
